[gd_scene load_steps=11 format=3 uid="uid://bcx668arqij6w"]

[ext_resource type="Script" uid="uid://wqm52dtuc1wm" path="res://scenes/fight/fight.gd" id="1_eigl2"]
[ext_resource type="PackedScene" uid="uid://bct6pd7l1iui0" path="res://scenes/ui/ui.tscn" id="2_l1apu"]
[ext_resource type="PackedScene" uid="uid://d3go1lkwhx5mg" path="res://scenes/enemys/friend/friend.tscn" id="2_pm575"]
[ext_resource type="Texture2D" uid="uid://b5cyg7hfck87d" path="res://placeholders/rascunho_batalha1.png" id="3_pm575"]
[ext_resource type="Texture2D" uid="uid://pqhpjncq6pjd" path="res://placeholders/personagem_baattle2.png" id="4_0pcxx"]
[ext_resource type="Texture2D" uid="uid://f2g6dcisimy6" path="res://placeholders/rule-of-third-940x626.png" id="5_tqboj"]
[ext_resource type="PackedScene" uid="uid://cyl30kecp6emh" path="res://scenes/player/player.tscn" id="6_ub08j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmy8o"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5lci"]
bg_color = Color(0.639216, 0.607843, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kobb"]
bg_color = Color(0, 0, 0, 1)

[node name="Fight" type="Node2D"]
script = ExtResource("1_eigl2")

[node name="Friend" parent="." instance=ExtResource("2_pm575")]
position = Vector2(960, 454)

[node name="UI" parent="." instance=ExtResource("2_l1apu")]

[node name="ActionsPanel" type="Panel" parent="UI"]
z_index = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 538.0
offset_top = -255.0
offset_right = -295.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_jmy8o")

[node name="Actions" type="HBoxContainer" parent="UI/ActionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 60.0
offset_right = -30.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Attack" type="Button" parent="UI/ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_i5lci")
text = "Atacar"

[node name="Defend" type="Button" parent="UI/ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_i5lci")
text = "Proteger"

[node name="Talk" type="Button" parent="UI/ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_i5lci")
text = "Falar"

[node name="TextBox" type="Panel" parent="UI"]
z_index = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 538.0
offset_top = -255.0
offset_right = -295.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_3kobb")

[node name="Label" type="RichTextLabel" parent="UI/TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/normal_font_size = 35
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true
text = "texto vai aqui"

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
offset_left = 288.0
offset_top = 39.0
offset_right = 1637.0
offset_bottom = 796.0
texture = ExtResource("3_pm575")

[node name="BattleRascunho" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(481, 628)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_0pcxx")

[node name="Rule-of-third-940x626" type="Sprite2D" parent="."]
visible = false
position = Vector2(959, 409)
scale = Vector2(1.47545, 1.23545)
texture = ExtResource("5_tqboj")

[node name="player" parent="." instance=ExtResource("6_ub08j")]
position = Vector2(503, 645)

[connection signal="attacking" from="." to="Friend" method="_on_fight_attacking"]
[connection signal="defending" from="." to="Friend" method="_on_fight_defending"]
[connection signal="talked" from="." to="Friend" method="_on_fight_talked"]
[connection signal="pressed" from="UI/ActionsPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="UI/ActionsPanel/Actions/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="UI/ActionsPanel/Actions/Talk" to="." method="_on_talk_pressed"]
